manifest-file/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
 name: notes-app-deployment
 namespace: notes-app
 labels:
  app: notes1

spec: 
 replicas: 3
 selector:
  matchLabels:
   app: notes1
 template:
  metadata:
   labels:
    app: notes1 
    
  spec: 
   containers:
   - name: notes-app
     image: vishal96g/notes-app:v1
     ports:
     - containerPort: 8000
     volumeMounts:             # added persitent details here 
     - mountPath: /data
       name: notes-app-storage # Volume name  
   volumes:
   - name: notes-app-storage
     persistentVolumeClaim: 
      claimName: pvc-notes-app #Refer persistent Volume Claim Config file
