manifest-file/pod.yml
apiVersion: v1
kind: Pod

metadata:
 name: notes
 namespace: notes-app
 labels:
  app: notes1 

spec: 
 containers: 
 - name: notes-app
   image: vishal96g/notes-app:v1
   ports:
   - containerPort: 8000
