manifest-file/apache.yml
apiVersion: apps/v1
kind: Deployment

metadata:
 name: apache-deployment
 namespace: notes-app
 labels:
  app: apache

spec: 
 replicas: 2
 selector:
  matchLabels:
   app: apache
 template:
  metadata:
   labels:
    app: apache
      
  spec:
   containers:
   - name: apache
     image: httpd:2.4
     ports:
     - containerPort: 80

---

apiVersion: v1
kind: Service

metadata:
 name: apache-service
 namespace: notes-app

spec:
 selector:
  app: apache
 ports:
 - protocol: TCP
   port: 80
   targetPort: 80
