manifest-file/service.yml
apiVersion: v1
kind: Service

metadata:
 name: notes-service
 namespace: notes-app

spec: 
 selector:
  app: notes1 
 ports:
 - protocol: TCP
   port: 8000
   targetPort: 8000
