manifest-file/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
 name: notes-app-ingress
 namespace: notes-app
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /

spec: 
 ingressClassName: nginx 
 rules:
 - http:
    paths: 
    - path: /
      pathType: Prefix
      backend:
       service:
        name: notes-service 
        port:
         number: 8000  


    - path: /index 
      pathType: Prefix
      backend:
       service:
        name: apache-service
        port:
         number: 80
